# rust_rabbitmq

./: .env  Cargo.toml  dockerfile
migrations/: 20260406161938_visits_table_create.sql
src/: db.rs  main.rs  models.rs
src/mq/: mod.rs
src/visits/: mod.rs  visits_repository.rs
